Fixed Issue of Overflow in Control Component (#102)

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,6 @@ h1, h2, h3, h4, h5, h6, p {
 	padding: 10px;
 	position: fixed;
 	padding-top: 30px;
-	overflow-x: hidden;
 	box-sizing: border-box;
 	background: rgb(var(--white) / 40%);
 }
@@ -112,14 +111,11 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Navbar */
 .navbar {
-	z-index: 99;
+	width: 100%;
 	height: 75px;
 	padding: 15px;
 	display: flex;
-	overflow: auto;
-	position: fixed;
 	box-sizing: border-box;
-	width: calc(100% - 225px);
 	background-color: rgb(var(--white) / 50%);
 }
 .navbar div.mrl-10:last-child { margin-left: auto }
@@ -133,7 +129,6 @@ h1, h2, h3, h4, h5, h6, p {
 }
 .base {
 	overflow: auto;
-	margin-top: 75px;
 	height: calc(100% - 75px);
 }
 .app-ui { height: calc(100% - 95px) }
